// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary of 1 expense 1`] = `
<div>
  <h1>
    viewing 
    1
     
    expense
     totalling ₹
    10
  </h1>
</div>
`;

exports[`should render summary of 2 expenses 1`] = `
<div>
  <h1>
    viewing 
    2
     
    expenses
     totalling ₹
    10010
  </h1>
</div>
`;
